--- a/config.json.example
+++ b/config.json.example
@@ -2,9 +2,9 @@
     "mysql":{
         "host": "127.0.0.1",
         "port": 3306,
-        "username": "gjh"
-        "password": "123"
-        "charset": "utf8"
+        "username": "gjh",
+        "password": "123",
+        "databasename": ""
     },
     "redis":{
         "host": "127.0.0.1"
