--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "ext-redis": ">=4.0",
     "ext-swoole": ">=4.0",
     "ext-json": "*",
-    "ext-mysqli": "*"
+    "ext-mysqli": "*",
+    "yunpian/yunpian-php-sdk": "^1.0"
   },
   "autoload": {
     "psr-4": {
